# RAG

RAG/: RagPipeline.py  app.py  docker-compose.yaml  pyproject.toml  ragpipeline2.py  requirement.txt
RAG/constitution_faiss/: index.faiss  index.pkl
