[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "torch>=2.12.1",
    "transformers>=5.13.0",
]
